change the url to the background image

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ h5 {
 }
  
 body {
-    background-image: url("/home/nimo/Documents/moringa-prep-projects/portfolio/images/clouds.jpg");
+    background-image: url("../images/clouds.jpg");
     
 }
  
